# mlreport

./: .gitignore  README.md  pyproject.toml
demos/: classification_cv_demo.py  classification_demo.ipynb  classification_demo.py  classification_search_demo.py  classification_search_numeric_demo.py  comparison_demo.py  comparison_three_demo.py  mlreport_guide.ipynb  regression_comparison_demo.py  regression_cv_demo.py  regression_demo.ipynb  regression_demo.py  regression_search_demo.py
demos/custom-models/lab2/: README  c45.py  crossVal.py  crossValSKGraph.py  crossValSKL.py  csv_reader.py  eval_cache.py  eval_grapher.py  induceC45.py  predict.py  requirements.txt
demos/custom-models/lab2/evaltrees/iris/: gain_ratio_0.01.json  gain_ratio_0.1.json  gain_ratio_0.2.json  gain_ratio_0.3.json  gain_ratio_0.4.json  gain_ratio_0.5.json  gain_ratio_0.6.json  gain_ratio_0.7.json  gain_ratio_0.8.json  gain_ratio_0.9.json  grid_search.json  info_gain_0.01.json  info_gain_0.1.json  info_gain_0.2.json  info_gain_0.3.json  info_gain_0.4.json  info_gain_0.5.json  info_gain_0.6.json  info_gain_0.7.json  info_gain_0.8.json  info_gain_0.9.json
demos/custom-models/lab2/evaltrees/letter-recog/: gain_ratio_0.4.json  gain_ratio_0.5.json  gain_ratio_0.6.json  gain_ratio_0.7.json  gain_ratio_0.8.json  gain_ratio_0.9.json  grid_search.json  info_gain_0.1.json  info_gain_0.2.json  info_gain_0.3.json  info_gain_0.4.json  info_gain_0.5.json  (+3 more)
demos/custom-models/lab2/trees/: best_tree.json  hyp_sample.json
demos/custom-models/lab3/: c45.py  csv_reader.py  df_c45.py  requirements.txt  rf.py  rfEval.py
demos/custom-models/lab3/output/: heart_466.out  heart_sklearn.out  iris_466.out  iris_sklearn.out  letters_466.out  letters_sklearn.out  nursery_466.out  nursery_sklearn.out
demos/reports/: report.html  report.json  report.md
src/mlreport/: __init__.py  comparison.py  render.py  report.py  theme.py
src/mlreport/handlers/: __init__.py  base.py  classification.py  clustering.py  regression.py
src/mlreport/templates/: comparison.html  comparison.md  comparison.txt  dark.html  light.html  report.html  report.md  report.txt
src/mlreport/templates/styles/: base.css  comparison.css  report.css
src/mlreport/templates/themes/: dark.css  light.css
tests/: classification_cv_demo.py  classification_demo.py  classification_search_demo.py  classification_search_numeric_demo.py  regression_cv_demo.py  regression_demo.py  regression_search_demo.py
(+25 files in other folders)
